--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,4 +13,4 @@ jobs:
           apt-get update && apt-get install -y python3.8 python3-pip
           pip3 install pylint
       - name: Pylint check
-        run: pylint *.py
+        run: pylint *.py --disable=missing-docstring
