--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Install dependencies
         run: |
           apt-get update && apt-get install -y python3.8 python3-pip
-          pip3 install pylint
+          pip3 install pylint pyTelegramBotAPI
       - name: Pylint check
         run: pylint *.py --disable=missing-docstring
