--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
-name: CI
+name: CI/CD
 
 on: push
 
 jobs:
-  build:
+  check:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -14,3 +14,19 @@ jobs:
           pip3 install pylint pyTelegramBotAPI
       - name: Pylint check
         run: pylint *.py --disable=missing-docstring
+  push-image:
+    needs: check
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1.12.0
+        with:
+          username: secrets.DOCKER_USERNAME
+          password: secrets.DOCKER_ACCESS_TOKEN
+
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker build -t mybot -f ../../Dockerfile.dockerfile
+          docker push mybot
