--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1.12.0
         with:
-          username: secrets.DOCKER_USERNAME
-          password: secrets.DOCKER_ACCESS_TOKEN
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
       - name: Push Docker image to Docker Hub
         run: |
