--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,6 @@ jobs:
       - name: Build & push Docker image to Docker Hub
         uses: docker/build-push-action@v2
         with:
+          context: .
           push: true
           tags: mybot:latest
