Fix push-image job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: mybot:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/missing_semester_homework:latest
