--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,8 @@ jobs:
 
   push-docker-image:
     needs: 
-      linter-check: success
+      linter-check:
+        result: success
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
