--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: Testing
 
 on:
   push:
@@ -17,24 +17,10 @@ jobs:
           pip3 install pylint pyTelegramBotAPI
       - name: Pylint check
         run: pylint *.py --disable=missing-docstring
-
-  push-docker-image:
-    needs: 
-      linter-check:
-        result: success
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
       
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1.12.0
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-
-      - name: Build & push Docker image to Docker Hub
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/missing_semester_homework:latest
+      - name: Create a release
+        if: ${{ success() }}
+        run: |
+          curl \
+          -X POST \
+          -H https://api.github.com/repos/afnastya/MissingSemesterHomework/releases
