Fix Testing job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,4 @@ jobs:
         if: ${{ success() }}
         run: |
           curl \
-          -X POST \
-          -H https://api.github.com/repos/afnastya/MissingSemesterHomework/releases
+          -X POST https://api.github.com/repos/afnastya/MissingSemesterHomework/releases
