--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,7 @@ jobs:
         if: ${{ success() }}
         run: |
           curl \
-          -X POST https://api.github.com/repos/afnastya/MissingSemesterHomework/releases
+          -X POST \
+          -H "Accept: application/vnd.github.v3+json" \
+          https://api.github.com/repos/afnastya/MissingSemesterHomework/releases \
+          -d '{"tag_name":"new release"}'
