--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,6 @@ jobs:
       - name: Pylint check
         run: pylint *.py --disable=missing-docstring
       
-      - name: Create a release
+      - name: Create release
         if: ${{ success() }}
-        run: |
-          curl \
-          -X POST \
-          -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/afnastya/MissingSemesterHomework/releases \
-          -d '{"tag_name":"new release"}'
+        uses: ncipollo/release-action@v1.9.0
